--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: 3.9
       
-    - name: Install despencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
