--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -5,8 +5,8 @@ on:
     paths:
     - '*.py'
 
-jobs: 
-  build: 
+jobs:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,10 +20,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install black
-          
+
       - name: Setup black_check
         uses: jpetrucciani/black-check@master
-      
+
       - name: Lint with black
         run: |
-          black . --line-length=100 --diff
+          black . --line-length="" --diff
