--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,16 +17,16 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-      
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
-      
+
     - name: Setup flake8 annotations
       uses: rbialon/flake8-annotations@v1
-      
+
     - name: Lint with flake8
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --ignore E402,E722,E302,W503 --max-line-length=100 --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --ignore E402,E722,E302,W503 --max-line-length="" --statistics
