--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --ignore E402,E722,E302,W503 --max-line-length="" --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --ignore E402,E722,E302,W503 --max-line-length=88 --statistics
