--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,9 +3,13 @@ name: Lint with Flake8
 # Ref: https://buildersbox.corp-sansan.com/entry/2021/02/18/110000
 
 on:
-  push:
+  pull_request:
+    types: 
+      - opened
+    branches:
+      - 'master/**'
     paths:
-    - '*.py'
+      - '*.py'
 
 jobs:
   build:
