--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,8 +23,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8
 
-    - name: Setup flake8 annotations
-      uses: rbialon/flake8-annotations@v1
+    - name: Setup flake8
+      uses: suo/flake8-github-action@releases/v1
 
     - name: Lint with flake8
       run: |
