--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
+        
+    - name: Setup GitHub annotations
+      uses: rbialon/flake8-annotations@v1
 
     - name: Lint with flake8
       run: |
