--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        FLAKE8_OUT=$(flake8 . --count --ignore E402,E722,E302,W503 --show-source --max-complexity=10 --max-line-length=100 --statistics)
+        FLAKE8_OUT=$(flake8 . --count --select=E9,F63,F7,F82 --show-source --max-complexity=10 --max-line-length=100 --statistics)
         echo "$FLAKE8_OUT"
         
         FLAKE8_ERRORS=$(echo "$FLAKE8_OUT" | grep -P '^.+:\d+:\d+:\s*E' || true)
