--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,8 @@
-name: Lint with Flake8
+name: Lint with Flake8,black
 # Uses: https://github.com/marketplace/actions/flake8-annotator
+# Uses: https://black.readthedocs.io/en/stable/integrations/github_actions.html
 # Ref: https://buildersbox.corp-sansan.com/entry/2021/02/18/110000
+# Ref: https://black.readthedocs.io/en/stable/index.html
 
 on:
   pull_request:
@@ -26,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
+        pip install black
         
     - name: Setup GitHub annotations
       uses: rbialon/flake8-annotations@v1
@@ -40,3 +43,10 @@ jobs:
           echo "::error::!!flake8 errors detected!!"
           exit 1
         fi
+
+      - name: Setup black_check
+        uses: psf/black@stable
+
+      - name: Formatter with black
+        run: |
+          black . --line-length=100 --diff
