--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,21 +32,21 @@ jobs:
         
     - name: Setup GitHub annotations
       uses: rbialon/flake8-annotations@v1
+      
+    - name: Setup black_check
+      uses: psf/black@stable
 
-    - name: Lint with flake8
+    - name: Lint
       run: |
         FLAKE8_OUT=$(flake8 . --count --select=E9,F63,F7,F82 --show-source --max-complexity=10 --max-line-length=100 --statistics)
         echo "$FLAKE8_OUT"
+        
+        black . --line-length=100 --diff
         
         FLAKE8_ERRORS=$(echo "$FLAKE8_OUT" | grep -P '^.+:\d+:\d+:\s*E' || true)
         if [ -n "$FLAKE8_ERRORS" ]; then
           echo "::error::!!flake8 errors detected!!"
           exit 1
         fi
+        
 
-    - name: Setup black_check
-      uses: psf/black@stable
-
-    - name: Formatter with black
-      run: |
-        black . --line-length=100 --diff
