--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,11 +28,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
+        pip install black
         
     - name: Setup GitHub annotations
       uses: rbialon/flake8-annotations@v1
       
-    - name: Lint
+    - name: Lint with Flake8
       run: |
         FLAKE8_OUT=$(flake8 . --count --select=E9,F63,F7,F82 --show-source --max-complexity=10 --max-line-length=100 --statistics)
         echo "$FLAKE8_OUT"
@@ -42,4 +43,7 @@ jobs:
           echo "::error::!!flake8 errors detected!!"
           exit 1
         fi
-
+    - name: Lint with black
+      uses: psf/black@stable
+      run: |
+        black . --line-length=100 --diff
