--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8
         pip install black
+        pip install pre-commit
 
     - name: Setup flake8 annotations
       uses: rbialon/flake8-annotations@v1
